# rust-massa-tracker

./: Cargo.toml  README.md
migrations/2021-10-01-180254_create_massaa/: down.sql  up.sql
migrations/2021-10-02-192445_massaa_add_column_comment/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
