[package]
authors = ["Markus H (MawKKe) <markus@mawkke.fi>"]
description = "Tool for recording daily weights"
repository = "https://github.com/MawKKe/rust-massa-tracker"
license = "Apache Licence, Version 2.0"
name = "rust-massa-tracker"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "src/bin/main.rs"
name = "massaa-rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", default-features = false, features = ["suggestions", "wrap_help"]}
diesel = {version = "1.4.4", features = ["chrono", "sqlite"]}
diesel_migrations = {version = "1.4.0"}
dotenv = {version = "0.15.0"}
chrono = {version = "*"}
libsqlite3-sys = {version = "*", features = ["bundled"]}
